--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!doctype html>
-<html lang="">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="icon" href="favicon.ico">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>shopping-project</title>
-  <script defer="defer" src="js/chunk-vendors.f5ca94fb.js"></script>
-  <script defer="defer" src="js/app.6dd3a25d.js"></script>
-  <link href="css/chunk-vendors.482579a3.css" rel="stylesheet">
-  <link href="css/app.e92b5e76.css" rel="stylesheet">
-</head>
-
-<body><noscript><strong>We're sorry but shopping-project doesn't work properly without JavaScript enabled. Please enable
-      it to continue.</strong></noscript>
-  <div id="app"></div>
-</body>
-
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>shopping-project</title><script defer="defer" src="js/chunk-vendors.f5ca94fb.js"></script><script defer="defer" src="js/app.847e1546.js"></script><link href="css/chunk-vendors.482579a3.css" rel="stylesheet"><link href="css/app.13cebaf3.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but shopping-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
